# toml-pretty-deser

./: .gitignore  Cargo.toml  README.md  Session.vim  bacon.toml  flake.nix  result
toml-pretty-deser/: CHANGELOG.md  Cargo.toml  README.md
toml-pretty-deser-macros/: Cargo.toml  README.md
toml-pretty-deser-macros/.github/workflows/: release.yml
toml-pretty-deser-macros/src/: lib.rs
toml-pretty-deser/compilation_failure_tests/: absorb_remaining_multiple.rs  absorb_remaining_multiple.stderr  absorb_remaining_wrong_key_type.rs  absorb_remaining_wrong_key_type.stderr  absorb_remaining_wrong_type_hashmap.rs  absorb_remaining_wrong_type_hashmap.stderr  absorb_remaining_wrong_type_vec.rs  absorb_remaining_wrong_type_vec.stderr  alias_enum_conflicts_alias.rs  alias_enum_conflicts_alias.stderr  alias_enum_conflicts_canonical.rs  alias_enum_conflicts_canonical.stderr  alias_enum_duplicate.rs  alias_enum_duplicate.stderr  alias_enum_same_as_name.rs  alias_enum_same_as_name.stderr  alias_struct_conflicts_alias.rs  alias_struct_conflicts_alias.stderr  alias_struct_conflicts_canonical.rs  alias_struct_conflicts_canonical.stderr  alias_struct_duplicate.rs  alias_struct_duplicate.stderr  alias_struct_same_as_name.rs  alias_struct_same_as_name.stderr  nested_and_default.rs  nested_and_default.stderr  nested_and_with.rs  nested_and_with.stderr  skip.rs  skip.stderr  tagged_enum_multi_fields.rs  tagged_enum_multi_fields.stderr  tagged_enum_named.rs  tagged_enum_named.stderr  tagged_enum_no_tag.rs  tagged_enum_no_tag.stderr  tagged_enum_root.rs  tagged_enum_root.stderr
toml-pretty-deser/examples/: README.md  e02_nested.rs  e03_enums.rs  e05_validation.rs  e06_defaults_and_optionals.rs  e07_collections.rs  e08_aliases_and_casing.rs  e09_adapter_functions.rs  e10_custom_types.rs  e11_absorb_remaining.rs  e12_adapt_in_verify.rs  e13_error_handling.rs  e14_improve_errors.rs  e15_map_key_validation.rs  manifest.txt
toml-pretty-deser/old_tests/: absorb_remaining.rs  b01.rs  basic.rs  enum.rs  nested_with_defaults.rs  skip.rs  tdp_make_enum.rs  unit_struct.rs  with.rs
toml-pretty-deser/old_tests/snapshots/: absorb_remaining__absorb_remaining_error_snapshot.snap  basic__default_but_not_set_in_verify.snap  basic__parsing_error.snap  maps__mapped_struct_wrong_field_type.snap  tagged_enum__either_one_wrong_value.snap
toml-pretty-deser/src/: adapt.rs  case.rs  collector.rs  deser.rs  error.rs  from_item.rs  helpers.rs  lib.rs  map_and_keys.rs  prelude.rs  table_helper.rs  tablelike.rs  traits.rs  value.rs  visitors.rs
toml-pretty-deser/temp_old/examples/: README.md  e01_basic.rs  e02_nested.rs  e04_tagged_enum.rs  e06_defaults_and_optionals.rs  e09_adapter_functions.rs  e12_adapt_in_verify.rs
toml-pretty-deser/tests/: a01.rs  absorb_remaining.rs  b01.rs  basic.rs  boxed.rs  c01.rs  comp_failures.rs  d01.rs  default.rs  e01.rs  enum.rs  examples_collected.rs  f01.rs  g01.rs  h01.rs  i01.rs  j01.rs  k01.rs  k02.rs  l01.rs  m01.rs  maps.rs  maps_bstring.rs  n01.rs  nested.rs  nested_with_defaults.rs  o01.rs  option.rs  simple.rs  skip.rs  tagged_enum.rs  tdp_make_enum.rs  unit_struct.rs  vec.rs  with.rs
toml-pretty-deser/tests/a01_macros/: mod.rs
toml-pretty-deser/tests/snapshots/: a01__absorb_remaining_bad.snap  a01__adapt_inner_wrong_types.snap  a01__adapt_inner_wrong_types.snap.new  a01__basic_missing.snap  a01__basic_unknown.snap  a01__basic_unknown_in_nested.snap  a01__box_nested_inner_field_missing.snap  a01__box_nested_missing.snap  a01__box_nested_wrong_type.snap  a01__error_in_map.snap  a01__error_in_opt.snap  a01__error_in_vec.snap  a01__map_erroron_key.snap  a01__map_nested.snap  a01__nested_unit_field.snap  a01__options_fail.snap  a01__skipped_enum_kinds.snap  (+76 more)
(+334 files in other folders)
