[workspace]
members = ["toml-pretty-deser", "toml-pretty-deser-macros"]
resolver = "2"

[workspace.package]
  version = "0.1.1"
  edition = "2024"
  authors = ["Florian Finkernagel <finkernagel@imt.uni-marburg.de>"]
  description = "TOML deserilization with pretty error messages"
  license = "MIT"
  repository = "https://github.com/TyberiusPrime/toml-pretty-deser"
  documentation = "https://docs.rs/toml-pretty-deser"
  keywords = ["TOML","deserialization"]
  categories = ["parsing"]
