[package]
name = "toml-pretty-deser"
version = "0.1.0"
edition = "2024"

[dependencies]
bstr = "1.12.1"
codesnake = "0.2.1"
memchr = "2.7.6"
num-traits = "0.2.19"
strsim = "0.11.1"
toml_edit = "0.24.0"
toml-pretty-deser-macros = { path = "../toml-pretty-deser-macros" }
mutants = "0.0.4"
indexmap = "2.13.0"
