[package]
  name = "toml-pretty-deser"
  readme = "README.md"
  version.workspace = true
  authors.workspace = true
  edition.workspace = true
  license.workspace = true
  repository.workspace = true
  description.workspace = true
  keywords.workspace = true
  categories.workspace = true



[dependencies]
bstr = "1.12.1"
codesnake = "0.2.1"
memchr = "2.7.6"
num-traits = "0.2.19"
strsim = "0.11.1"
toml_edit = "0.24.0"
toml-pretty-deser-macros = { path = "../toml-pretty-deser-macros", version="0.2.1" }
mutants = "0.0.4"
indexmap = "2.13.0"

[dev-dependencies]
insta = { version = "1.46.3", features = ["yaml"] }
trybuild = "1.0.115"
